kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: governance-system
  labels:
    name: governance-system
    app: origin
    tier: governance
