kubernetes/immutable-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immutable-db
  namespace: governance-system
  labels:
    app: immutable-db
spec:
  selector:
    app: immutable-db
  ports:
  - port: 3322
    targetPort: 3322
    name: immudb
  clusterIP: None
